src/app/page/selection/selection.component.scss
.selection-warpper {
  margin-bottom: 3rem;
}

.selection {
  gap: 10px;
  &.flex {
    display: flex;
    justify-content: space-evenly;
    align-items: flex-start;

    & > .card {
      flex: 1;
    }
    @media screen and (max-width: 500px) {
      flex-direction: column;
    }
  }

  &.grid {
    display: grid;
    align-items: start;

    @media screen and (min-width: 500px) {
      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
    }
  }
}

.img-block {
  width: 150px;
  height: 150px;
  user-select: none;
}

.card {
  display: grid;
  align-items: start;
  justify-items: center;

  text-align: center;
  cursor: pointer;
  padding: 0.5rem;
  border-radius: 1rem;

  &:hover {
    opacity: 0.8;
    background-color: #fff3;
  }

  &:has(:checked) {
    background-color: #fff7df;
  }

  @media screen and (max-width: 500px) {
    padding: 0.5rem 3rem;
  }
}

.end-position {
  height: calc(72px + 3rem);
}

.end-select {
  position: fixed;
  display: grid;
  justify-items: center;
  width: 100%;
  bottom: 0;
  background-color: #e7e0cd;
  border-top: solid 1px #82807a;
  padding: 0.5rem 0;
  box-shadow: 0 1px 0px 0 rgba(0, 0, 0, 0.25);

  transition: all 0.5s;
  &:not(.show) {
    transform: translateY(calc(72px + 3rem));
  }
}

.score {
  position: fixed;
  top: 2rem;
  right: calc(50vw - 34rem);

  min-width: 3rem;
  height: 3rem;

  padding: 0 0.5rem;
  border-radius: 2rem;

  display: flex;
  place-content: center;
  place-items: center;
  z-index: 1;

  user-select: none;
  transition: background-color 1s;
  box-shadow: 0 1px 0px 0 rgba(0, 0, 0, 0.25);

  font-size: 1.5rem;
}

